--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,7 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains
 
 *.DS_Store*
+
+*.terraform.*
+
+**.terraform.**
